public/studentsubmission/Logs/demo1/[118-69-133-17][89212124][demo1][CE150762][C].c.log
Compile Error
[118-69-133-17][89212124][demo1][CE150762][C].c: In function 'main':
[118-69-133-17][89212124][demo1][CE150762][C].c:26:10: error: 'i' undeclared (first use in this function)
     for (i=0; i<n; ++i)
          ^
[118-69-133-17][89212124][demo1][CE150762][C].c:26:10: note: each undeclared identifier is reported only once for each function it appears in
[118-69-133-17][89212124][demo1][CE150762][C].c:30:12: warning: passing argument 1 of 'printf' makes pointer from integer without a cast [-Wint-conversion]
     printf(result);
            ^~~~~~
In file included from [118-69-133-17][89212124][demo1][CE150762][C].c:6:
C:/Program Files (x86)/mingw-w64/i686-8.1.0-posix-dwarf-rt_v6-rev0/mingw32/i686-w64-mingw32/include/stdio.h:509:48: note: expected 'const char * restrict' but argument is of type 'int'
   int __cdecl printf(const char * __restrict__ _Format,...);
                      ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
